--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
     "vite": "^4.3.5"
+  },
+  "dependencies": {
+    "bootstrap": "^5.3.0"
   }
 }
