--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "vite": "^4.3.5"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-brands-svg-icons": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/vue-fontawesome": "^3.0.3",
     "bootstrap": "^5.3.0"
   }
 }
